# vertical-edition

./: README.md  requirements.txt
bookstore_mgmt/: README.rst
bookstore_mgmt/i18n/: ca.po  es.po  it.po
bookstore_mgmt_google_books_api/: README.rst  __manifest__.py
bookstore_mgmt_google_books_api/i18n/: bookstore_mgmt_google_books_api.pot  ca.po  es.po  it.po
bookstore_mgmt_google_books_api/models/: __init__.py  product.py
bookstore_mgmt_google_books_api/views/: product.xml
setup/_metapackage/: pyproject.toml
